...
                      Navigator.push(
                          context,
                          MaterialPageRoute(
                              builder: (context) => CategoryView(
                                    user: customer,
                                    products: products,
                                    category: 'dress',
                                  )));
                    },
                    title: Text('Dress'),
                    leading: Icon(Icons.dashboard),
                  ),
                  ListTile(
                    onTap: () {
                      Navigator.push(
                          context,
...
              );
            }),
      );
    else
      return Drawer(
        child: ListView(
          key: Key('here'),
          children: <Widget>[
            //            header
            UserAccountsDrawerHeader(
              accountName: Text('${customer.name}'),
              accountEmail: Text('${customer.email}'),
              currentAccountPicture: GestureDetector(
...
                Icons.help,
                color: Colors.red,
              ),
            ),
            if (customer.guest == false)
              ListTile(
                key: Key('out'),
                onTap: () async {
                  //await widget.auth.signOut();
                  await context.read<AuthService>().signOut();
                },
                title: Text('Sign out'),
                leading: Icon(
...
