...
  final BuildContext context;
  @override
  _MyHomePageState createState() => _MyHomePageState();
}

class _MyHomePageState extends State<MyHomePage> {
  final String title = "Fetch";
  Map ahmedd = {
    'account': 'ahmed@gmail.com',
    'name': 'ahmed',
    'phone': '+201141111111',
    'photo': 'boy_profile.jpg',
    'type': 'buyer',
...
              ),
            ],
          ),
          actions: <Widget>[
            if (customer.guest == false && customer.type == 'buyer')
              IconButton(
                  key: Key('go_to_cart'),
                  icon: Icon(
                    Icons.shopping_cart,
                    color: Colors.black,
                  ),
                  onPressed: () {
                    Navigator.push(
...
